<resources>

    <plurals name="plurals_tracks">
        <item quantity="zero">нет треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>


    <plurals name="plurals_minutes">
        <item quantity="zero">0 минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_assignment">Пользовательское соглашение</string>

    <string name="support_message_address">lvravdin@edu.hse.ru</string>
    <string name="support_message_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="assignment_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="no_internet_text">Проблемы со связью \n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="favourites_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="name">Название*</string>
    <string name="descr">Описание</string>
    <string name="create">Создать</string>

    <string name="finish_playlist_creation">Завершить создание плейлиста?</string>
    <string name="all_data_will_be_lost">Все несохраненные данные будут потеряны.</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>

    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="already_added_to_playlist"> Трек уже добавлен в плейлист</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="wanna_delete_track">Хотите удалить трек?</string>
    <string name="nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="share">Поделиться</string>
    <string name="change_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <string name="wanna_delete_playlist">Хотите удалить плейлист</string>

    <string name="change">Редактировать</string>
    <string name="save">Сохранить</string>

</resources>

