<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_bg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="52dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sp"
            android:gravity="top"
            android:paddingLeft="@dimen/_12dp"
            android:paddingTop="@dimen/_10dp"
            android:paddingRight="62dp"
            android:paddingBottom="@dimen/_12dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_16sp"
        android:layout_marginRight="@dimen/_16sp"
        android:orientation="vertical"
        android:layout_marginBottom="28dp"
        >

        <Button
            android:id="@+id/search_button"
            app:icon="@drawable/search_button"
            android:text="@string/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            style="@style/MainButtonStyle"
            />

        <Button
            android:id="@+id/media_button"
            app:icon="@drawable/music_button"
            android:text="@string/media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/_16dp"
            style="@style/MainButtonStyle"
            />






        <Button
            android:id="@+id/settings_button"
            app:icon="@drawable/settings_button"
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/MainButtonStyle"
            />






    </LinearLayout>


</LinearLayout>