<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_16dp"
        android:paddingTop="@dimen/_16dp"
        android:paddingLeft="@dimen/_16dp"
        android:layout_marginBottom="24dp"
        >

        <Button
            android:id="@+id/settings_button_back"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:letterSpacing="0"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="normal"
            app:backgroundTint="@color/white"
            app:icon="@drawable/arrow_back"
            app:iconPadding="@dimen/_12dp"

            app:iconTint="@color/black">


        </Button>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            >

            <Switch
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:drawableTint="#0B0A0A"
                android:gravity="center|start"
                android:letterSpacing="0"
                android:paddingLeft="@dimen/_16dp"
                android:text="@string/dark_theme"
                android:textAllCaps="false"
                android:textColor="@color/black"

                android:textSize="@dimen/_16sp"

                app:backgroundTint="@color/white"


                app:icon="@drawable/share_button"
                app:iconGravity="end"
                app:iconPadding="@dimen/_12dp"
                app:iconTint="@color/grey_icon"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:letterSpacing="0"
                android:text="@string/share_app"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                app:backgroundTint="@color/white"
                app:icon="@drawable/share_button"
                app:iconGravity="end"


                app:iconPadding="@dimen/_12dp"
                app:iconTint="@color/grey_icon"
                app:rippleColor="@color/white" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:letterSpacing="0"
                android:text="@string/write_to_support"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                app:backgroundTint="@color/white"
                app:icon="@drawable/support_button"
                app:iconGravity="end"


                app:iconPadding="@dimen/_12dp"
                app:iconTint="@color/grey_icon" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:letterSpacing="0"
                android:text="@string/user_assignment"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                app:backgroundTint="@color/white"
                app:icon="@drawable/arrow_forward"
                app:iconGravity="end"


                app:iconPadding="@dimen/_12dp"
                app:iconTint="@color/grey_icon" />


        </LinearLayout>


</LinearLayout>








